# autotools

./: README.md
gomi/: README.md  buildrpm.sh  hellolib.spec
hellocmd/: .gitignore  AAA  README.md  configure.ac
hellocmd_deb/: CreateDeb.sh  README.md
hellocmd_deb/src/: hello.c
hellocmd_rpm/: .gitignore  AUTHORS  CreateTgzPkg.sh  Makefile  README.md  buildrpm.sh  hellocmd.spec
hellolib/: .gitignore  README.md
hellolib/include/: hellolib.h
hellolib/src/: testhello.cpp
hellolib/src/hellolib/: print.cpp
hellolib_deb/: CreateDeb.sh
hellolib_deb/include/: notinclude.h
hellolib_deb/src/: hellolib.cpp
hellolib_rpm/: .gitignore  AUTHORS  CreateTgzPkg.sh  README.md  buildrpm.sh  configure.ac  hellolib.spec
hellolib_rpm/include/: Makefile.am
hellolib_rpm/src/: Makefile.am
